<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
       <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dip"
            android:text="System URL"
            android:background="#7DD0D7"
            android:textSize="20sp"/>
          <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dip"
            android:text="@string/systemweb"
            android:textSize="20sp"
            android:autoLink="web"/>
          <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dip"
            android:text="System App QRcode"
            android:background="#7DD0D7"
            android:textSize="20sp"/>
            <TextView 
              android:id="@+id/qrcode"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="QRcode"
              android:layout_gravity="center"
              android:textSize="20sp"
              android:textColor="#6eacf2"
              android:textStyle="bold"
              android:clickable="true"/>
            <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dip"
            android:text="Certificate of merit for Project Research"
            android:background="#7DD0D7"
            android:textSize="18sp"/>
             <TextView 
              android:id="@+id/infoshow"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="Participate Information Show"
              android:layout_gravity="center"
              android:textSize="20sp"
              android:textColor="#6eacf2"
              android:textStyle="bold"
              android:clickable="true"/>
             <TextView 
              android:id="@+id/superior"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="Project Superior Class"
              android:layout_gravity="center"
              android:textSize="20sp"
              android:textColor="#6eacf2"
              android:textStyle="bold"
              android:clickable="true"/>
          <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dip"
            android:text="Certificate"
            android:background="#7DD0D7"
            android:textSize="20sp"/>
          <TextView 
              android:id="@+id/license1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/license1"
              android:layout_gravity="center"
              android:textSize="20sp"
              android:textColor="#6eacf2"
              android:textStyle="bold"
              android:clickable="true"/>
           <TextView 
              android:id="@+id/license2"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/license2"
              android:layout_marginTop="10dip"
              android:gravity="center"
              android:textSize="20sp"
              android:textColor="#6eacf2"
              android:textStyle="bold"
              android:clickable="true"/>
            <TextView 
              android:id="@+id/license3"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/license3"
              android:layout_marginTop="10dip"
              android:layout_gravity="center"
              android:textSize="20sp"
              android:textColor="#6eacf2"
              android:textStyle="bold"
              android:clickable="true"/>
             <TextView
              android:id="@+id/license4" 
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/license4"
              android:layout_marginTop="10dip"
              android:layout_gravity="center"
              android:textSize="20sp"
              android:textColor="#6eacf2"
              android:textStyle="bold"
              android:clickable="true"/>
             <TextView
              android:id="@+id/license5" 
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/license5"
              android:layout_marginTop="10dip"
              android:layout_gravity="center"
              android:textSize="20sp"
              android:textColor="#6eacf2"
              android:textStyle="bold"
              android:clickable="true"/>
              <TextView 
              android:id="@+id/license6"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/license6"
              android:layout_marginTop="10dip"
              android:gravity="center"
              android:textSize="20sp"
              android:textColor="#6eacf2"
              android:textStyle="bold"
              android:clickable="true"/>
              <TextView 
              android:id="@+id/license7"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/license7"
              android:layout_marginTop="10dip"
              android:gravity="center"
              android:textSize="20sp"
              android:textColor="#6eacf2"
              android:textStyle="bold"
              android:clickable="true"/>
            <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dip"
            android:text="EXPERIENCE"
            android:background="#7DD0D7"
            android:textSize="20sp"/>
            <TextView 
              android:id="@+id/project"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/project"
              android:layout_marginTop="10dip"
              android:gravity="center"
              android:textSize="20sp"
              android:textColor="#6eacf2"
              android:textStyle="bold"
              android:clickable="true"/>
             <TextView 
              android:id="@+id/rank1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/rank1"
              android:layout_marginTop="10dip"
              android:gravity="center"
              android:textSize="20sp"
              android:textColor="#6eacf2"
              android:textStyle="bold"
              android:clickable="true"/>
            <TextView 
              android:id="@+id/rank3"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/rank3"
              android:layout_marginTop="10dip"
              android:gravity="center"
              android:textSize="20sp"
              android:textColor="#6eacf2"
              android:textStyle="bold"
              android:clickable="true"/>
            
            <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dip"
            android:text="CAREER SUMMARY"
            android:background="#7DD0D7"
            android:textSize="20sp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/job1company"
                android:gravity="center"
                android:background="#e5eaf1"
                android:layout_marginTop="10dip"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/job1time"
                android:gravity="center"
                android:layout_marginTop="10dip"
                android:textSize="20sp"/>
             <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/job1"
                android:gravity="center"
                android:layout_marginTop="10dip"
                android:textSize="20sp"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="30dip"
                android:text="@string/job2company"
                android:background="#e5eaf1"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dip"
                android:text="@string/job2time"
                android:textSize="20sp"/>
			<TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dip"
                android:text="@string/job2"
                android:textSize="20sp"/>
</LinearLayout>
</ScrollView>